.waves-effect (materialize) --> .ripple-light-background (MDC ripple)

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,15 +40,15 @@
           </svg>
         </a>
       </div>
-  		<li><a class='waves-effect' href='index.html'>Home</a></li>
+  		<li><a class='ripple-light-bg' href='index.html'>Home</a></li>
   		<li>
   			<ul class='collapsible collapsible-accordion'>
-  				<li><a class='collapsible-header waves-effect'>About</a>
+  				<li><a class='collapsible-header ripple-light-bg'>About</a>
   					<div class='collapsible-body'>
   						<ul>
-  							<li><a class='waves-effect' href='about.html'>General Information</a></li>
-  							<li><a class='waves-effect' href='leaders.html'>Leaders</a></li>
-  							<li><a class='waves-effect' href='eagle-scout-honor-roll.html'>Eagle Scout Honor Roll</a></li>
+  							<li><a class='ripple-light-bg' href='about.html'>General Information</a></li>
+  							<li><a class='ripple-light-bg' href='leaders.html'>Leaders</a></li>
+  							<li><a class='ripple-light-bg' href='eagle-scout-honor-roll.html'>Eagle Scout Honor Roll</a></li>
   						</ul>
   					</div>
   				</li>
@@ -56,13 +56,13 @@
   		</li>
   		<li>
   			<ul class='collapsible collapsible-accordion'>
-  				<li><a class='collapsible-header waves-effect'>Information</a>
+  				<li><a class='collapsible-header ripple-light-bg'>Information</a>
   					<div class='collapsible-body'>
   						<ul>
-  							<li><a class='waves-effect' href='participation.html'>Scout/Parent Participation</a></li>
-  							<li><a class='waves-effect' href='forms-documents.html'>Forms &amp; Documents</a></li>
-  							<li><a class='waves-effect' href='advancement.html'>Advancement</a></li>
-  							<li><a class='waves-effect' href='helpful-links.html'>Helpful Links</a></li>
+  							<li><a class='ripple-light-bg' href='participation.html'>Scout/Parent Participation</a></li>
+  							<li><a class='ripple-light-bg' href='forms-documents.html'>Forms &amp; Documents</a></li>
+  							<li><a class='ripple-light-bg' href='advancement.html'>Advancement</a></li>
+  							<li><a class='ripple-light-bg' href='helpful-links.html'>Helpful Links</a></li>
   						</ul>
   					</div>
   				</li>
@@ -70,13 +70,13 @@
   		</li>
   		<li>
   			<ul class='collapsible collapsible-accordion'>
-  				<li> <a class='collapsible-header waves-effect'>Scouts</a>
+  				<li> <a class='collapsible-header ripple-light-bg'>Scouts</a>
   					<div class='collapsible-body'>
   						<ul>
-  							<li><a class='waves-effect' href='leadership-training.html'>Leadership Training</a></li>
-  							<li><a class='waves-effect' href='faqs.html'>Frequently Asked Questions</a></li>
-  							<li><a class='waves-effect' href='finding-mb.html'>​Find Merit Badge Class or Counselor</a></li>
-  							<li><a class='waves-effect' href='new-scouts.html'>Letter to New Scouts</a></li>
+  							<li><a class='ripple-light-bg' href='leadership-training.html'>Leadership Training</a></li>
+  							<li><a class='ripple-light-bg' href='faqs.html'>Frequently Asked Questions</a></li>
+  							<li><a class='ripple-light-bg' href='finding-mb.html'>​Find Merit Badge Class or Counselor</a></li>
+  							<li><a class='ripple-light-bg' href='new-scouts.html'>Letter to New Scouts</a></li>
   						</ul>
   					</div>
   				</li>
@@ -84,11 +84,11 @@
   		</li>
   		<li>
   			<ul class='collapsible collapsible-accordion'>
-  				<li> <a class='collapsible-header waves-effect'>Troop Events</a>
+  				<li> <a class='collapsible-header ripple-light-bg'>Troop Events</a>
   					<div class='collapsible-body'>
   						<ul>
-  							<li><a class='waves-effect' href='camps-adventure.html'>Camps/High Adventure</a></li>
-  							<li><a class='waves-effect' href='campout-schedule-local-events.html'>Campout Schedule &amp; Local Events</a></li>
+  							<li><a class='ripple-light-bg' href='camps-adventure.html'>Camps/High Adventure</a></li>
+  							<li><a class='ripple-light-bg' href='campout-schedule-local-events.html'>Campout Schedule &amp; Local Events</a></li>
   						</ul>
   					</div>
   				</li>
@@ -96,28 +96,28 @@
   		</li>
   		<li>
   			<ul class='collapsible collapsible-accordion'>
-  				<li> <a class='collapsible-header waves-effect'>Members</a>
+  				<li> <a class='collapsible-header ripple-light-bg'>Members</a>
   					<div class='collapsible-body'>
   						<ul>
-  							<li><a class='waves-effect' href='email-newsletters_encrypted.html'>Weekly Newsletters</a></li>
-  							<li><a class='waves-effect' href='calendar_encrypted.html'>Calendar</a></li>
-  							<li><a class='waves-effect' href='mb-counselors_encrypted.html'>Merit Badge Counselors</a></li>
-  							<li><a class='waves-effect' href='troop-roster_encrypted.html'>Troop Roster</a></li>
-  							<li><a class='waves-effect' href='what-can-i-do_encrypted.html'>What Can I Do?</a></li>
+  							<li><a class='ripple-light-bg' href='email-newsletters_encrypted.html'>Weekly Newsletters</a></li>
+  							<li><a class='ripple-light-bg' href='calendar_encrypted.html'>Calendar</a></li>
+  							<li><a class='ripple-light-bg' href='mb-counselors_encrypted.html'>Merit Badge Counselors</a></li>
+  							<li><a class='ripple-light-bg' href='troop-roster_encrypted.html'>Troop Roster</a></li>
+  							<li><a class='ripple-light-bg' href='what-can-i-do_encrypted.html'>What Can I Do?</a></li>
   						</ul>
   					</div>
   				</li>
   			</ul>
   		</li>
-  		<li><a class='waves-effect' href='photos.html'>Photos</a></li>
-  		<li><a class='waves-effect' href='contact.html'>Contact</a></li>
-  		<li><a class='waves-effect' href='payments.html'>Payments</a></li>
-  		<li><a class='waves-effect' href='http://store.troop370atlanta.org' target='blank'>Pine Straw</a></li>
+  		<li><a class='ripple-light-bg' href='photos.html'>Photos</a></li>
+  		<li><a class='ripple-light-bg' href='contact.html'>Contact</a></li>
+  		<li><a class='ripple-light-bg' href='payments.html'>Payments</a></li>
+  		<li><a class='ripple-light-bg' href='http://store.troop370atlanta.org' target='blank'>Pine Straw</a></li>
   		<li>
   			<div class='divider'></div>
   		</li>
   		<li><a class='subheader'>© 2019 Troop 370</a></li>
-  		<li><a class='waves-effect' href='contact-webmaster.html'>Contact Webmaster for password</a></li>
+  		<li><a class='ripple-light-bg' href='contact-webmaster.html'>Contact Webmaster for password</a></li>
   	</ul>
 
     <div class='top'>
