add missing styles for sidenav divider

--- a/resources/materialize/0.97.8/css/materialize-sidenav.css
+++ b/resources/materialize/0.97.8/css/materialize-sidenav.css
@@ -99,6 +99,9 @@
 
 .side-nav .divider {
   margin: 8px 0 0 0;
+  height: 1px;
+  overflow: hidden;
+  background-color: #e0e0e0;
 }
 
 .side-nav .subheader {
