set nav color to colorful

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -122,7 +122,7 @@
   		<li><a class='ripple-light-bg' href='contact-webmaster.html'>Contact Webmaster for password</a></li>
   	</ul>
 
-    <div class='top'>
+    <div class='top colorful'>
     	<topnav>
     		<div class='container'>
           <titlebar id='titlebar1'>
