--- a/styles/troop370-topnav-v2.css
+++ b/styles/troop370-topnav-v2.css
@@ -1,28 +1,19 @@
-.top, .top.light {
+.top {
   --top-height: 60px;
   --titlebar-heading-width: 286px;
-  --titlebar-heading-color: #003f87;
   --titlebar-heading-font-size: 24px;
   --titlebar-heading-padding-x: 16px;
   --titlebar-heading-padding-y: 18px;
   --titlebar-margin-left: 0;
   --menu-icon-display: none;
-  --menu-icon-fill: #003f87;
   --main-nav-height: 60px;
   --main-nav-display: inline-flex;
-  --topnav-bg-color: #ffffff;
-  --topnav-text-color: #222222;
-  --topnav-dropdown-text-color: #222222;
-  --topnav-currentpage-color: #003f87;
   --topnav-a-padding-x: 15.3px;
   --topnav-a-padding-y: 19px;
   --topnav-dropdown-arrow-padding-y: 14px;
   --topnav-dropdown-arrow-svg-margin-top: 4px;
   --topnav-dropdown-a-padding-x: 16px;
   --topnav-dropdown-a-padding-y: 12px;
-  --topnav-dropdown-bg-color: #f7f7f7;
-  --topnav-ripple-color: #003f87;
-  --topnav-dropdown-ripple-color: #003f87;
 }
 .top.colorful, .top.dark {
   --titlebar-heading-color: #e0e0e0;
@@ -38,6 +29,45 @@
 }
 .top.dark {
   --topnav-bg-color: #212121;
+}
+.top.light {
+  --titlebar-heading-color: #003f87;
+  --menu-icon-fill: #003f87;
+  --topnav-bg-color: #ffffff;
+  --topnav-text-color: #222222;
+  --topnav-dropdown-text-color: #222222;
+  --topnav-currentpage-color: #003f87;
+  --topnav-dropdown-bg-color: #f7f7f7;
+  --topnav-ripple-color: #003f87;
+  --topnav-dropdown-ripple-color: #003f87;
+}
+@media (max-width: 600px) { /*duplicated from above*/
+  .top.mobile-colorful, .top.mobile-dark {
+    --titlebar-heading-color: #e0e0e0;
+    --menu-icon-fill: #e0e0e0;
+    --topnav-text-color: #e0e0e0;
+    --topnav-dropdown-text-color: #222222;
+    --topnav-currentpage-color: #e0e0e0;
+    --topnav-dropdown-bg-color: #f7f7f7;
+    --topnav-ripple-color: #ffffff;
+  }
+  .top.mobile-colorful {
+    --topnav-bg-color: #003f87;
+  }
+  .top.mobile-dark {
+    --topnav-bg-color: #212121;
+  }
+  .top.mobile-light {
+    --titlebar-heading-color: #003f87;
+    --menu-icon-fill: #003f87;
+    --topnav-bg-color: #ffffff;
+    --topnav-text-color: #222222;
+    --topnav-dropdown-text-color: #222222;
+    --topnav-currentpage-color: #003f87;
+    --topnav-dropdown-bg-color: #f7f7f7;
+    --topnav-ripple-color: #003f87;
+    --topnav-dropdown-ripple-color: #003f87;
+  }
 }
 .top {
   position: sticky;
@@ -79,6 +109,15 @@ titlebar heading {
   overflow: hidden;
   text-overflow: ellipsis;
   transition: padding 0.2s, font-size 0.2s, margin 0.2s;
+}
+#title1.animateme {
+  width: var(--titlebar-heading-width);
+}
+#title1.animateme heading {
+  width: 100vw;
+}
+.nav-shadow #title1.animateme heading {
+  width: var(--titlebar-heading-width);
 }
 /*menu icon*/
 .button-collapse {
@@ -191,12 +230,15 @@ titlebar heading {
     --top-height: 60px;
     --titlebar-heading-padding-y: 18px;
   }
-  .top {
+  .top, .top.light, .top.mobile-light {
     --titlebar-heading-width: calc(100vw - 67px);
     --titlebar-heading-font-size: 20px;
     --titlebar-margin-left: 50px;
     --menu-icon-display: block;
     --main-nav-display: none;
+  }
+  .animateme {
+    transform: none !important;
   }
 }
 /*sidenav drawer variables*/
@@ -275,72 +317,71 @@ titlebar heading {
   display: none;
 }
 @media (max-width: 1400px) and (min-width: 600px) {
-    .main-nav li a {
-      --topnav-a-padding-x: 12px;
+  .main-nav li a {
+    --topnav-a-padding-x: 12px;
+  }
+  @media (max-width: 1330px) {
+    #pinestraw {
+      display: none;
     }
-    @media (max-width: 1330px) {
-      #pinestraw {
+    #dropdownarrow, #drop-pinestraw {
+      display: block;
+    }
+    @media (max-width: 1260px) {
+      #payments {
         display: none;
       }
-      #dropdownarrow, #drop-pinestraw {
+      #drop-payments {
         display: block;
       }
-      @media (max-width: 1260px) {
-        #payments {
+      @media (max-width: 1150px) {
+        #contact {
           display: none;
         }
-        #drop-payments {
+        #drop-contact {
           display: block;
         }
-        @media (max-width: 1150px) {
-          #contact {
+        #members .dropdown-content{
+          right: 0;
+        }
+        @media (max-width: 1050px) {
+          #photos {
             display: none;
           }
-          #drop-contact {
+          #drop-photos {
             display: block;
           }
-          #members .dropdown-content{
+          #tevents .dropdown-content{
             right: 0;
           }
-          @media (max-width: 1050px) {
-            #photos {
-              display: none;
+          @media (max-width: 960px) {
+            .main-nav li a {
+              --topnav-a-padding-x: 7px;
             }
-            #drop-photos {
-              display: block;
-            }
-            #tevents .dropdown-content{
-              right: 0;
-            }
-            @media (max-width: 960px) {
-              .main-nav li a {
-                --topnav-a-padding-x: 7px;
+            @media (max-width: 900px) {
+              #members {
+                display: none;
               }
-              @media (max-width: 900px) {
-                #members {
+              #drop-members {
+                display: block;
+              }
+              #drop-contact {
+                width: 260px;
+              }
+              #scouts .dropdown-content{
+                right: 0;
+              }
+              @media (max-width: 810px) {
+                titlebar {
+                  --titlebar-heading-width: 200px;
+                }
+              }
+              @media (max-width: 730px) {
+                #tevents {
                   display: none;
                 }
-                #drop-members {
+                #drop-tevents {
                   display: block;
-                }
-                #drop-contact {
-                  width: 260px;
-                }
-                #scouts .dropdown-content{
-                  right: 0;
-                }
-                @media (max-width: 810px) {
-                  titlebar heading {
-                    --titlebar-heading-width: 200px;
-                  }
-                }
-                @media (max-width: 730px) {
-                  #tevents {
-                    display: none;
-                  }
-                  #drop-tevents {
-                    display: block;
-                  }
                 }
               }
             }
@@ -349,7 +390,34 @@ titlebar heading {
       }
     }
   }
-  @keyframes fadein {
-      from { opacity: 0; }
-      to   { opacity: 1; }
-  }
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+
+/*titlebar heading {
+  --titlebar-heading-font-size: 34px;
+  margin-top: 41px;
+  --titlebar-heading-width: 100%;
+  position: absolute;
+  --titlebar-heading-padding-y: 54px;
+  background: #134885;
+  transition: padding 0.2s, font-size 0.2s, margin 0.2s, background 0.2s;
+  margin-bottom: 130px;
+}
+.top {
+  margin-bottom: 132px;
+}
+.top.nav-shadow {
+  margin-bottom: 0;
+}
+.nav-shadow titlebar heading {
+  --titlebar-heading-width: 286px;
+  --titlebar-heading-font-size: 20px;
+  --titlebar-heading-padding-y: 13px;
+  margin-top: 0;
+  position: unset;
+  background: none;
+}*/
