--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,7 +122,7 @@
     	<topnav>
     		<div class='container'>
           <titlebar id='titlebar1'>
-        		<a href='index.html' id='title1'><heading>{% if page.title == 'Home' %} BSA Troop 370 {% else %} {{page.title}} {% endif %}</heading></a>
+        		<a href='#' id='title1'><heading>{% if page.title == 'Home' %} BSA Troop 370 {% else %} {{page.title}} {% endif %}</heading></a>
             <a href='#' data-activates='slide-out' class='button-collapse ripple-light-bg' style='line-height: 0;color: transparent;'>Menu
       				<svg xmlns='http://www.w3.org/2000/svg' class='menu-icon2' width='24' height='24' viewBox='0 0 24 24'>
       					<path d='M0 0h24v24H0z' fill='none' />
