add pine straw sale

--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,7 @@
   background-image: url("/src/banner images/scout shadow on top of mountain with sunset.jpg");
 }
 #mcard2 {
-  background-image: url("/src/banner images/florida-mtb.jpg")
+  background-image: url("/src/banner images/pineneedles_l.jpg")
 }
 #mcard3 {
   background-image: url("/src/banner images/ookpik - skiing in a flat feild.jpg")
