show site title when page title is enlarged before scroll

--- a/_layouts/collapsing_header.html
+++ b/_layouts/collapsing_header.html
@@ -123,6 +123,7 @@
     		<div class='container'>
           <titlebar id='titlebar1'>
         		<a href='#' id='title1' class="scrollme animateme" data-when="view" data-from="0.6" data-to="0" data-easing="linear" data-translatex="58" data-translatey="96" data-scale="1.466"><heading>{% if page.title == 'Home' %} BSA Troop 370 {% else %} {{page.title}} {% endif %}</heading></a>
+            <a id='title1-site'><heading>{{ site.title }}</heading></a>
             <a href='#' data-activates='slide-out' class='button-collapse ripple-light-bg' style='line-height: 0;color: transparent;'>Menu
       				<svg xmlns='http://www.w3.org/2000/svg' class='menu-icon2' width='24' height='24' viewBox='0 0 24 24'>
       					<path d='M0 0h24v24H0z' fill='none' />
