support header banners with subtitle

--- a/_layouts/collapsing_header.html
+++ b/_layouts/collapsing_header.html
@@ -203,6 +203,7 @@
     <div class="banner hide-mobile">
       <div class="container">
         <h3 class="size8">&nbsp;</h3>
+        {% if page.subtitle == '' %} {% else %} <p>{{ page.subtitle }}</p> {% endif %}
       </div>
     </div>
 
