--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,57 +10,21 @@
     <link rel="stylesheet" href="styles/bundle.css">
     <script src="scripts/bundle.js" async></script>
     <link rel="stylesheet" href="styles/troop370-topnav-v2.css">
-    <link rel="stylesheet" href="resources/materialize/0.97.8/css/materialize-sidenav.css"
+    <link rel="stylesheet" href="resources/materialize/0.97.8/css/materialize-sidenav.css">
+    <script src='scripts/cookie.js' async></script>
+    <link rel='stylesheet' href='styles/snackbar.css'>
   </head>
 
-  <body>
+  <body onLoad="recallCookie()">
     <!-- cookie consent -->
     <div class="snackbar">
-      <p> By using this site, you consent to using cookies </p>
-      <a href="cookies.html" class="snackbar-button"> Learn More </a>
-      <p onclick="acceptedCookie()" class="snackbar-button"> Accept </p>
+      <p>Troop 370 uses cookies to improve your experience. By using this site, you consent to the use of these cookies </p>
+      <div class="snackbar-button-container">
+        <a href="cookies.html" class="snackbar-button"> Learn More </a>
+        <p onclick="acceptedCookie()" class="snackbar-button"> Accept </p>
+      </div>
     </div>
-    <style>
-      .snackbar {
-        position: fixed;
-        left: 10px;
-        bottom: 10px;
-        background-color: #212121;
-        color: #e0e0e0;
-        font-size: 16px;
-        padding: 6px 8px;
-        border-radius: 3px;
-      }
-      .snackbar p {
-        margin-left: 8px;
-        display: inline-block;
-      }
-      .snackbar a {
-        margin-left: 20px;
-        text-decoration: none;
-      }
-      .snackbar-button {
-        padding: 6px 8px;
-        text-transform: uppercase;
-      }
-      .snackbar-button:last-of-type {
-        margin-left: 8px;
-      }
-      .snackbar-button:hover {
-        box-shadow: inset 0 0 100px #ffffff33;
-      }
-      .snackbar-button:active {
-        box-shadow: inset 0 0 100px #ffffff55;
-      }
-      @media (max-width: 600px) {
-        .snackbar-button {
-          bottom: 0;
-          left: 0;
-          border-radius: 0;
-          width: 100%;
-        }
-      }
-    </style>
+
     <!-- HEADER -->
   	<ul id='slide-out' class='side-nav'>
       <div class='header'>
