change snackbar learn more to cookie policy to improve seo readings

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
     <div class="snackbar">
       <p>Troop 370 uses cookies to improve your experience. By using this site, you consent to the use of these cookies </p>
       <div class="snackbar-button-container">
-        <a href="cookies.html" class="snackbar-button"> Learn More </a>
-        <p onclick="acceptedCookie()" class="snackbar-button"> Accept </p>
+        <a href="cookies.html" class="snackbar-button">Cookie Policy</a>
+        <p onclick="acceptedCookie()" class="snackbar-button">Accept</p>
       </div>
     </div>
 
