--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,7 @@
   background-image: url("/src/banner images/pineneedles_l.jpg")
 }
 #mcard3 {
-  background-image: url("/src/banner images/ookpik - skiing in a flat feild.jpg")
+  background-image: url("/src/banner images/generic camping - tent with light.jpg")
 }
 #mcard4 {
   background-image: url("/src/banner images/wsr-sign-far.jpg")
