move bundle.js to end of body, fixing script not being loaded into all elements properly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,6 @@
     <link rel='stylesheet' href='styles/components.css'>
     <link rel='stylesheet' href='styles/page-specific.css'>
     <link rel="stylesheet" href="styles/bundle.css">
-    <script src="scripts/bundle.js" async></script>
     <link rel="stylesheet" href="styles/troop370-topnav-v2.css">
     <link rel="stylesheet" href="resources/materialize/0.97.8/css/materialize-sidenav.css">
     <script src='scripts/cookie.js' async></script>
@@ -267,6 +266,8 @@
     <!-- sidenav menu for mobile -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.js"></script>
 
+    <!-- mdc budle script (support for mdc buttons, ripples, etc.) -->
+    <script src="scripts/bundle.js" async></script>
 
   </body>
 </html>
