--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,6 +101,7 @@
   							<li><a class='ripple-light-bg' href='faqs.html'>Frequently Asked Questions</a></li>
   							<li><a class='ripple-light-bg' href='finding-mb.html'>​Find Merit Badge Class or Counselor</a></li>
   							<li><a class='ripple-light-bg' href='new-scouts.html'>Letter to New Scouts</a></li>
+                <li><a class='ripple-light-bg' href='https://start-stop-continue.com/survey/3c0b8802f414bd9d1938'>Start Stop Continue</a></li>
   						</ul>
   					</div>
   				</li>
@@ -180,6 +181,7 @@
                 <a href='faqs.html' class='ripple-light-bg'>Frequently Asked Questions</a>
                 <a href='finding-mb.html' class='ripple-light-bg'>​Find Merit Badge Class or Counselor</a>
                 <a href='new-scouts.html' class='ripple-light-bg'>Letter to New Scouts</a>
+                <a href='https://start-stop-continue.com/survey/3c0b8802f414bd9d1938' class='ripple-light-bg'>Start Stop Continue</a>
     					</dropdown>
     				</li>
     				<li class='dropdown' id='tevents'><a href='javascript:void(0)' class='ripple-light-bg'>Troop Events</a>
