--- a/styles/page-specific.css
+++ b/styles/page-specific.css
@@ -129,3 +129,9 @@ staticrypt-title {
 #paypal-button:hover {
   filter: brightness(83%);
 }
+.text-field-row {
+  padding: var(--content-strip-elements-padding-between) var(--content-strip-padding-x);
+}
+textarea#text-field-fullwidth-textarea-helper {
+  padding: 6px 16px 10px 16px;
+}
