combine Information and Scouts dropdowns into Information dropdown

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,23 +83,13 @@
   				<li><a class='collapsible-header ripple-light-bg'>Information</a>
   					<div class='collapsible-body'>
   						<ul>
-  							<li><a class='ripple-light-bg' href='participation.html'>Scout/Parent Participation</a></li>
   							<li><a class='ripple-light-bg' href='forms-documents.html'>Forms &amp; Documents</a></li>
   							<li><a class='ripple-light-bg' href='advancement.html'>Advancement</a></li>
-  							<li><a class='ripple-light-bg' href='helpful-links.html'>Helpful Links</a></li>
-  						</ul>
-  					</div>
-  				</li>
-  			</ul>
-  		</li>
-  		<li>
-  			<ul class='collapsible collapsible-accordion'>
-  				<li> <a class='collapsible-header ripple-light-bg'>Scouts</a>
-  					<div class='collapsible-body'>
-  						<ul>
-  							<li><a class='ripple-light-bg' href='leadership-training.html'>Leadership Training</a></li>
+                <li><a class='ripple-light-bg' href='participation.html'>Participation</a></li>
+                <li><a class='ripple-light-bg' href='leadership-training.html'>Leadership Training</a></li>
   							<li><a class='ripple-light-bg' href='faqs.html'>Frequently Asked Questions</a></li>
-  							<li><a class='ripple-light-bg' href='finding-mb.html'>​Find Merit Badge Class or Counselor</a></li>
+  							<li><a class='ripple-light-bg' href='finding-mb.html'>Merit Badges</a></li>
+                <li><a class='ripple-light-bg' href='helpful-links.html'>Helpful Links</a></li>
                 <li><a class='ripple-light-bg' href='https://start-stop-continue.com/survey/3c0b8802f414bd9d1938'>Start Stop Continue</a></li>
   						</ul>
   					</div>
@@ -168,17 +158,13 @@
     				</li>
     				<li class='dropdown' id='info'><a href='javascript:void(0)' class='ripple-light-bg'>Information</a>
     					<dropdown class='dropdown-content'>
-                <a href='participation.html' class='ripple-light-bg'>Scout/Parent Participation</a>
                 <a href='forms-documents.html' class='ripple-light-bg'>Forms &amp; Documents</a>
                 <a href='advancement.html' class='ripple-light-bg'>Advancement</a>
-                <a href='helpful-links.html' class='ripple-light-bg'>Helpful Links</a>
-    					</dropdown>
-    				</li>
-    				<li class='dropdown' id='scouts'><a href='javascript:void(0)' class='ripple-light-bg'>Scouts</a>
-    					<dropdown class='dropdown-content'>
+                <a href='participation.html' class='ripple-light-bg'>Participation</a>
                 <a href='leadership-training.html' class='ripple-light-bg'>Leadership Training</a>
                 <a href='faqs.html' class='ripple-light-bg'>Frequently Asked Questions</a>
-                <a href='finding-mb.html' class='ripple-light-bg'>​Find Merit Badge Class or Counselor</a>
+                <a href='finding-mb.html' class='ripple-light-bg'>Merit Badges</a>
+                <a href='helpful-links.html' class='ripple-light-bg'>Helpful Links</a>
                 <a href='https://start-stop-continue.com/survey/3c0b8802f414bd9d1938' class='ripple-light-bg'>Start Stop Continue</a>
     					</dropdown>
     				</li>
