rename 'Troop Events' to 'Events'

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,7 +98,7 @@
   		</li>
   		<li>
   			<ul class='collapsible collapsible-accordion'>
-  				<li> <a class='collapsible-header ripple-light-bg'>Troop Events</a>
+  				<li> <a class='collapsible-header ripple-light-bg'>Events</a>
   					<div class='collapsible-body'>
   						<ul>
   							<li><a class='ripple-light-bg' href='camps-adventure.html'>Camps/High Adventure</a></li>
@@ -168,7 +168,7 @@
                 <a href='https://start-stop-continue.com/survey/3c0b8802f414bd9d1938' class='ripple-light-bg'>Start Stop Continue</a>
     					</dropdown>
     				</li>
-    				<li class='dropdown' id='tevents'><a href='javascript:void(0)' class='ripple-light-bg'>Troop Events</a>
+    				<li class='dropdown' id='tevents'><a href='javascript:void(0)' class='ripple-light-bg'>Events</a>
     					<dropdown class='dropdown-content'>
                 <a href='camps-adventure.html' class='ripple-light-bg'>Camps/High Adventure</a>
                 <a href='campout-schedule-local-events.html' class='ripple-light-bg'>Campout Schedule &amp; Local Events</a>
