--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name='theme-color' content='#003f87'>
     <link rel='manifest' href='manifest.json'>
     <link rel='shortcut icon' type='image/x-icon' href='src/troop370-logo/favicon.ico'>
-    <link rel='stylesheet' href='styles/components.css'>
+    <link rel='stylesheet' href='styles/components-v2.css'>
     <link rel='stylesheet' href='styles/page-specific.css'>
     <link rel="stylesheet" href="styles/bundle.css">
     <link rel="stylesheet" href="styles/troop370-topnav-v2.css">
