--- a/styles/components-v2.css
+++ b/styles/components-v2.css
@@ -13,14 +13,19 @@ h1, h2, h3, h4, h5, h6 {
   box-sizing: border-box;
 }
 :root {
+  --content-max-width: 1388px;
+}
+:root /*font family*/ {
   --heading-font-family: 'IBM Plex Sans', sans-serif;
-  --heading-font-weight: 500;
   --button-font-family: 'IBM Plex Sans', sans-serif;
-  --button-font-weight: 700;
   --text-font-family: 'Roboto', sans-serif;
+}
+:root /*font weight*/ {
+  --heading-font-weight: 500;
+  --button-font-weight: 700;
   --text-font-weight: 400;
 }
-:root {
+:root /*text spacing*/ {
   --h1-sp: -1.5px;
   --h2-sp: -0.5px;
   --h3-sp: 0px;
@@ -35,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
   --caption-sp: 0.4px;
   --overline-sp: 01.5px;
 }
-:root {
+:root /*font size*/ {
   --h1-font-size: 96px;
   --h2-font-size: 60px;
   --h3-font-size: 48px;
@@ -51,6 +56,44 @@ h1, h2, h3, h4, h5, h6 {
   --caption-font-size: 12px;
   --overline-font-size: 10px;
 }
+:root /*text color*/ {
+  --banner-text-color: #eeeeee;
+  --banner-text-color-light: #134885;
+  --content-strip-text-color: #1f1f1f;
+  --content-strip-text-color-light: #e0e0e0;
+  --button-text-color-light: #e0e0e0;
+  --button-text-color-dark: #134885;
+}
+:root /*background*/ {
+  --banner-background-color: #134885;
+  --content-strip-background-color: transparent;
+  --background-blue: #134885;
+  --background-red: #bc1b2d;
+  --background-white: #ffffff;
+  --button-background-color-light-hover: rgba(255,255,255,0.20);
+  --button-background-color-dark-hover: rgba(0,0,0,0.20);
+}
+:root /*padding*/ {
+  --banner-padding-y: 35px;
+  --banner-padding-x: 10px;
+  --banner-padding-y-increased: calc(var(--banner-padding-y) + 40px);
+  --banner-padding-x-increased: calc(var(--banner-padding-y) + 0px);
+  --banner-elements-padding-between: 5px;
+  --content-strip-padding-y: 35px;
+  --content-strip-padding-x: 10px;
+  --content-strip-padding-y-increased: calc(var(--content-strip-padding-y) + 40px);
+  --content-strip-padding-x-increased: calc(var(--content-strip-padding-x) + 0px);
+  --content-strip-padding-ol-x: calc(var(--content-strip-padding-x) + 20px);
+  --content-strip-elements-padding-between: 5px;
+}
+:root /*margin*/ {
+  --button-margin: 6px;
+}
+:root /*border*/ {
+  --button-border-radius: 2px;
+  --button-border-color-light: #e0e0e0;
+  --button-border-color-dark: #636161;
+}
 @media (max-width: 600px) {
   :root {
     --h3-8-font-size: 28px;
@@ -61,43 +104,7 @@ h1, h2, h3, h4, h5, h6 {
     display: none !important;
   }
 }
-:root {
-  --content-max-width: 1388px;
-}
-:root {
-  --banner-padding-y: 35px;
-  --banner-padding-x: 10px;
-  --banner-padding-y-increased: calc(var(--banner-padding-y) + 40px);
-  --banner-padding-x-increased: calc(var(--banner-padding-y) + 0px);
-  --banner-elements-padding-between: 5px;
-  --banner-background-color: #134885;
-  --banner-text-color: #eeeeee;
-  --background-blue: #134885;
-  --background-red: #bc1b2d;
-  --background-white: #ffffff;
-  --banner-text-color-light: #134885;
-}
-:root {
-  --content-strip-padding-y: 35px;
-  --content-strip-padding-x: 10px;
-  --content-strip-padding-y-increased: calc(var(--content-strip-padding-y) + 40px);
-  --content-strip-padding-x-increased: calc(var(--content-strip-padding-x) + 0px);
-  --content-strip-padding-ol-x: calc(var(--content-strip-padding-x) + 20px);
-  --content-strip-elements-padding-between: 5px;
-  --content-strip-background-color: transparent;
-  --content-strip-text-color: #1f1f1f;
-  --content-strip-text-color-light: #e0e0e0;
-}
-:root {
-  --button-border-radius: 2px;
-  --button-margin: 6px;
-  --button-text-color-light: #e0e0e0;
-  --button-text-color-dark: #134885;
-  --button-border-color-light: #e0e0e0;
-  --button-border-color-dark: #636161;
-  --button-background-color-light-hover: rgba(255,255,255,0.20);
-  --button-background-color-dark-hover: rgba(0,0,0,0.20);
-}
+
 div.content-strip.blue, div.content-strip.blue subtitle, div.content-strip.blue h4, div.content-strip.blue p {
   background-color: var(--background-blue);
   color: var(--content-strip-text-color-light) !important;
