--- a/styles/components-v2.css
+++ b/styles/components-v2.css
@@ -1,10 +1,12 @@
 @import "../styles/fonts.css";
+@import "../styles/colors.css";
 @import "../styles/legacy_components.css";
 html {
     line-height: 1.5;
     font-family: "Roboto", sans-serif;
     font-weight: normal;
     color: rgba(0, 0, 0, 0.87);
+    background-color: var(--theme-background);
 }
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
@@ -57,19 +59,10 @@ h1, h2, h3, h4, h5, h6 {
   --overline-font-size: 10px;
 }
 :root /*text color*/ {
-  --banner-text-color: #eeeeee;
-  --banner-text-color-light: #134885;
-  --content-strip-text-color: #1f1f1f;
-  --content-strip-text-color-light: #e0e0e0;
   --button-text-color-light: #e0e0e0;
   --button-text-color-dark: #134885;
 }
 :root /*background*/ {
-  --banner-background-color: #134885;
-  --content-strip-background-color: transparent;
-  --background-blue: #134885;
-  --background-red: #bc1b2d;
-  --background-white: #ffffff;
   --button-background-color-light-hover: rgba(255,255,255,0.20);
   --button-background-color-dark-hover: rgba(0,0,0,0.20);
 }
@@ -123,7 +116,7 @@ div.container {
 div.banner {
   display: flex;
   height: auto;
-  background-color: var(--banner-background-color);
+  background-color: var(--theme-primary-lighter);
   justify-content: center;
   padding: var(--banner-padding-y) 0;
 }
@@ -133,18 +126,18 @@ div.banner.extra-padding-y {
 div.banner h3.size8, div.banner subtitle, div.banner p {
   display: block;
   max-width: inherit;
-  color: var(--banner-text-color);
+  color: var(--theme-text-on-primary);
   padding: var(--banner-elements-padding-between) var(--banner-padding-x);
 }
 div.banner.red {
-  background-color: var(--background-red);
+  background-color: var(--theme-secondary);
 }
 div.banner.white, div.banner.white subtitle, div.banner.white p {
-  background-color: var(--background-white);
-  color: var(--banner-text-color-white) !important;
+  background-color: var(--theme-background);
+  color: var(--theme-text-on-background) !important;
 }
 div.banner.white h3.size8 {
-  color: var(--banner-text-color-light) !important;
+  color: var(--theme-primary_accent_text-on-background) !important;
 }
 div.banner h3.size8 {
   font-family: var(--heading-font-family);
@@ -169,7 +162,7 @@ div.banner p + div.buttonrow, subtitle p + div.buttonrow {
 div.content-strip {
   display: flex;
   height: auto;
-  background-color: var(--content-strip-background-color);
+  background-color: var(--theme-background);
   justify-content: center;
   padding: var(--content-strip-padding-y) 0 0 0;
 }
@@ -179,7 +172,7 @@ div.content-strip:last-of-type, div.content-strip.last-in-section {
 div.content-strip h3.size8, div.content-strip h4, div.content-strip h5, div.content-strip h6, div.content-strip subtitle, div.content-strip p {
   display: block;
   max-width: inherit;
-  color: var(--content-strip-text-color);
+  color: var(--theme-text-on-background);
   padding: var(--content-strip-elements-padding-between) var(--content-strip-padding-x);
 }
 div.content-strip h3.size8 + p, div.content-strip h4 + p, div.content-strip h5 + p, div.content-strip h6 + p {
