--- a/styles/app.scss
+++ b/styles/app.scss
@@ -15,7 +15,7 @@ $mdc-theme-secondary-dark: #840005;
 $mdc-theme-background: #ffffff;
 $mdc-snackbar-action-ink-color: $mdc-theme-primary-lightest;
 $mdc-snackbar-shape-radius: $t-border-radius-standard;
-$mdc-snackbar-fill-color: #222222;
+$mdc-snackbar-fill-color: var(--snackbar-background);
 
 //override button style
 $mdc-typography-styles-button: (
@@ -34,10 +34,20 @@ $mdc-typography-styles-button: (
 @import "@material/snackbar/mdc-snackbar";
 @import "@material/icon-button/mdc-icon-button";
 
-.member-pass {
-  @include mdc-text-field-focused-outline-color($mdc-theme-primary);
-  @include mdc-text-field-outline-shape-radius(2px)
+.member-pass, .mdc-text-field--textarea {
+  @include mdc-text-field-outline-color(var(--field-outline-color-on-background));
+  @include mdc-text-field-hover-outline-color(var(--field-outline-color-hover-on-background));
+  @include mdc-text-field-focused-outline-color(var(--field-outline-color-focus-on-background));
+  @include mdc-text-field-outline-shape-radius(2px);
+  @include mdc-text-field-ink-color(var(--field-text-color-on-background));
+  @include mdc-text-field-label-color(var(--field-outline-color-focus-on-background));
+  @include mdc-text-field-caret-color(var(--field-outline-color-focus-on-background));
 }
+.mdc-text-field:not(.mdc-text-field--disabled) .mdc-notched-outline:not(.mdc-notched-outline--notched) .mdc-floating-label {
+  color: var(--field-unfocused-text-color-on-background);
+}
+//.mdc-text-field--textarea.mdc-text-field--focused:not(.mdc-text-field--disabled) .mdc-notched-outline__trailing
+
 
 //buttons
 @mixin button-light-ripple {
@@ -66,14 +76,26 @@ $mdc-typography-styles-button: (
   @include mdc-button-filled-accessible($mdc-theme-primary);
 }
 .standard-dark-button.mdc-button--outlined {
-  @include mdc-button-container-fill-color($mdc-theme-background);
-  @include mdc-button-ink-color($mdc-theme-primary);
+  @include mdc-button-container-fill-color(transparent);
+  @include mdc-button-ink-color(var(--button-text-on-background));
   @include mdc-button-outline-color($t-border-color-dark-standard);
   @include mdc-button-outline-width($t-border-outline-width-standard);
   @include mdc-states(#000000);
   @include mdc-states-hover-opacity(.08);
   @include mdc-states-focus-opacity(.12);
   @include mdc-states-press-opacity(.20);
+  &::before, &::after {
+    background-color: var(--button-ripple-color-on-background);
+  }
+  &:hover::before {
+    opacity: var(--button-ripple-color-hover-opacity-on-background);
+  }
+  &.mdc-ripple-upgraded--background-focused::before, &:not(.mdc-ripple-upgraded):focus::before {
+    opacity: var(--button-ripple-color-focus-opacity-on-background);
+  }
+  &.mdc-ripple-upgraded--foreground-activation {
+    --mdc-ripple-fg-opacity: var(--button-ripple-color-active-opacity-on-background);
+  }
 }
 .standard-light-button.mdc-button--outlined {
   @include mdc-button-container-fill-color(transparent);
