--- a/styles/colors.css
+++ b/styles/colors.css
@@ -12,4 +12,19 @@
   --theme-primary_accent_text-on-background: var(--theme-primary-lighter);
   --theme-text-on-primary: #e0e0e0;
   --theme-text-on-secondary: #e0e0e0;
+  --mdc-theme-primary: #003f87;
+  --mdc-theme-primary-lighter: #134885;
+  --mdc-theme-primary-light: #4969b7;
+  --mdc-theme-primary-lightest: #8096cd;
+  --mdc-theme-primary-dark: #001a59;
+  --mdc-theme-secondary: #bc1b2d;
+  --mdc-theme-secondary-light: #f55656;
+  --mdc-theme-secondary-darker: #911321;
+  --mdc-theme-secondary-dark: #840005;
+  --mdc-theme-background: #ffffff;
+  --mdc-theme-text-on-background: #1f1f1f;
+  --mdc-theme-primary_accent_text-on-background: var(--mdc-theme-primary-lighter);
+  --mdc-theme-text-on-primary: #e0e0e0;
+  --mdc-theme-text-on-secondary: #e0e0e0;
+  --mdc-theme-error: #b00020;
 }
