add colors.css to re-enable colors for mdc form

--- a/_layouts/encrypted.html
+++ b/_layouts/encrypted.html
@@ -7,6 +7,7 @@
     <link rel='shortcut icon' type='image/x-icon' href='src/troop370-logo/favicon.ico'>
     <link rel='stylesheet' href='styles/staticrypt.css'>
     <link rel="stylesheet" href="styles/bundle.css">
+    <link rel="stylesheet" href="styles/colors.css">
     <script src="scripts/bundle.js" async></script>
     <!-- do not cache this page -->
     <meta http-equiv="cache-control" content="max-age=0"/>
